--- a/src/app/pages/myplaces/myplaces.page.scss
+++ b/src/app/pages/myplaces/myplaces.page.scss
@@ -1,38 +1,14 @@
-ion-card {
-    margin: 10px 0;
+.box {
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    padding: 5px;
+    box-shadow: 0px 0px 10px -4px var(--ion-color-dark);
 
-    ion-card-content {
-        padding: 10px;
-    }
-
-    .cards {
-        .img {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-        }
-
-        align-items: center;
-        justify-content: space-evenly;
-
-        .sale {
-            background: var(--ion-color-danger);
-            padding: 0;
-            width: 70px;
-            text-align: center;
-            display: block;
-            position: absolute;
-            right: 0;
-            top: 20px;
-            transform: rotate(40deg);
-            color: #fff;
-            border-radius: 5px;
-        }
-    }
-
-    .btns{
-        div{
-            width: 50%;
-        }
+    .tile-img {
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;
+        object-fit: contain;
     }
 }
