--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -113,3 +113,43 @@
     object-fit: contain;
     border-radius: 50%;
 }
+
+.chat-content{
+    .user_name {
+        color: #fff;
+        font-size: 12px;
+    }
+    .user_name2 {
+        color: #00000082;
+        font-size: 12px;
+    }
+    .message {
+        padding: 10px !important;
+        transition: all 250ms ease-in-out !important;
+        border-radius: 10px !important;
+        margin-bottom: 4px !important;
+    }
+    .my_message {
+        background: red;
+        color: #000 !important;
+    }
+    .other_message {
+        background: #dcdcdc !important;
+        color: #000 !important;
+    }
+    .time {
+        color: #afafaf;
+        float: right;
+        font-size: small;
+    }
+    .message_row {
+        background-color: #fff;
+    }
+    .sendbtn{
+        text-align: center;
+    }
+    
+    ion-col{
+        margin-bottom: 10px;
+    }
+}
