--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -141,3 +141,17 @@
         margin-bottom: 10px;
     }
 }
+
+.popImgClass{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.mdiv{
+    align-items: center;
+    p{
+        font-weight: bold;
+    }
+}
