--- a/src/app/pages/friendrequest/friendrequest.page.scss
+++ b/src/app/pages/friendrequest/friendrequest.page.scss
@@ -1,5 +1,8 @@
 ion-card{
-    margin: 0;
+    margin: 10px 0;
+    .flex{
+        align-items: center;
+    }
     .img{
         width: 80px;
         height: 80px;
@@ -9,6 +12,7 @@ ion-card{
     }
     .msg-box{
         flex-direction: column;
+        padding-left: 10px;
     }
     .btns{
         div{
