--- a/src/app/pages/myplaces/myplaces.page.html
+++ b/src/app/pages/myplaces/myplaces.page.html
@@ -25,7 +25,7 @@
           </div>
           <div class="flex">
             <div>
-              <ion-button expand="block" fill="outline" size="small" color="dark">View</ion-button>
+              <ion-button expand="block" fill="outline" size="small" color="dark" [routerLink]="['/t/h/'+c?.id+'/'+c?.username]">View</ion-button>
             </div>
             <div>
               <ion-button expand="block" fill="outline" size="small" color="dark">Buy</ion-button>
