Chat API, Room API, Chat save from Server hroku.

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Chat</ion-title>
+    <ion-title>{{name}}</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="general.closeModal()">
         <ion-icon name="close-outline"></ion-icon>
