--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,7 +6,7 @@
       <ion-label>FlatMeta</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="myplaces">
+    <ion-tab-button tab="salelist">
       <ion-icon name="location"></ion-icon>
       <ion-label>On Sale</ion-label>
     </ion-tab-button>
