thank you page, Paypal subscription added for new buy and Sale list.

--- a/src/app/pages/salelist/salelist.page.html
+++ b/src/app/pages/salelist/salelist.page.html
@@ -28,7 +28,7 @@
               <ion-button expand="block" fill="outline" size="small" color="dark" [routerLink]="['/t/h/n/n']" (click)="toUserPlace(c)">View</ion-button>
             </div>
             <div>
-              <ion-button expand="block" fill="outline" size="small" color="dark">Buy</ion-button>
+              <ion-button expand="block" fill="outline" size="small" color="dark" (click)="makePayment(c?.buy_link)">Buy</ion-button>
             </div>
           </div>
         </div>
