--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -34,9 +34,9 @@
   <ion-toolbar>
 
     <ion-item lines="none">
-      <ion-input type="text" placeholder="Message" [(ngModel)]="newMessage" autocomplete="on" autocorrect="on">
+      <ion-input type="text" placeholder="Message" [(ngModel)]="newMessage" autocomplete="on" autocorrect="on" (keyup.enter)="sendMessage(newMessage); $event.preventDefault()">
       </ion-input>
-      <ion-button (mousedown)="sendMessage(newMessage); $event.preventDefault()" fill="clear" slot="end">
+      <ion-button (mousedown)="sendMessage(newMessage); $event.preventDefault()"  fill="clear" slot="end">
         <ion-icon icononly name="send-outline"></ion-icon>
       </ion-button>
     </ion-item>
