--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -102,7 +102,7 @@
   <ion-toolbar [routerLink]="['/login']" mode="ios">
     <ion-title>
       <ion-button fill="clear" color="dark" size="small">
-        Have an Account?
+        Already have an account?
       </ion-button>
     </ion-title>
   </ion-toolbar>
