sign up files issue fixed.

--- a/src/app/components/forgetpassword/forgetpassword.component.html
+++ b/src/app/components/forgetpassword/forgetpassword.component.html
@@ -74,7 +74,7 @@
 
       <div style="font-size: 12px;" class="text-danger"
         *ngIf="(getControl.password.errors && !getControl.password.errors?.required) || (getControl.confirmPassword.errors && !getControl.confirmPassword.errors?.required)">
-        
+        Password must contain more than 8 characters, 1 numeric, 1 upper case letter, and 1 special character($@$!%*?&).
       </div>
 
       <ion-button expand="block" fill="outline" color="dark" shape="round" type="submit" style="margin-top: 20px;"
