--- a/src/app/pages/myplaces/myplaces.page.html
+++ b/src/app/pages/myplaces/myplaces.page.html
@@ -26,16 +26,11 @@
               Sale Price: ${{c?.sale_price}} per tile
             </div>
           </div>
-          <div class="flex">
-            <div>
-              <ion-button expand="block" fill="outline" size="small" color="dark" (click)="showPriceModal(c)">Update
-                Price</ion-button>
-            </div>
-
-          </div>
-
         </div>
       </div>
+      <ion-button expand="block" fill="outline" size="small" color="dark" (click)="showPriceModal(c)">
+        Update Price
+      </ion-button>
 
     </ion-card-content>
   </ion-card>
