home routing name update

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,7 +1,7 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="h/n/n">
+    <ion-tab-button tab="home">
       <ion-icon name="map"></ion-icon>
       <ion-label>FlatMeta</ion-label>
     </ion-tab-button>
