--- a/src/app/pages/salelist/salelist.page.html
+++ b/src/app/pages/salelist/salelist.page.html
@@ -25,7 +25,7 @@
           </div>
           <div class="flex">
             <div>
-              <ion-button expand="block" fill="outline" size="small" color="dark" [routerLink]="['/t/h/n/n']" (click)="toUserPlace(c)">View</ion-button>
+              <ion-button expand="block" fill="outline" size="small" color="dark" [routerLink]="['/flatmeta/home']" (click)="toUserPlace(c)">View</ion-button>
             </div>
             <div>
               <ion-button expand="block" fill="outline" size="small" color="dark" (click)="makePayment(c?.buy_link)">Buy</ion-button>
