--- a/src/app/pages/recentpurchases/recentpurchases.page.html
+++ b/src/app/pages/recentpurchases/recentpurchases.page.html
@@ -1,9 +1,35 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>recentpurchases</ion-title>
+    <ion-title>
+      Recent Purchases
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" *ngFor="let c of tilesList; let i = index;">
+        <div class="flex box">
+          <div>
+            <img [src]="c?.image" class="tile-img">
+          </div>
+          <div>
+            <div>
+              Tiles: {{c?.no_of_tiles}}
+            </div>
+            <div>
+              Per Tile: ${{c?.amount}}
+            </div>
+          </div>
+          <div>
+            <ion-button expand="block" fill="outline" size="small" color="dark" [routerLink]="['/flatmeta/home']"
+              (click)="toUserPlace(c)">View</ion-button>
+          </div>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
