side menu fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 
         <ion-list>
           <ion-menu-toggle autoHide="false" *ngFor="let p of pages">
-            <ion-item routerLinkActive="selected" routerDirection="root" lines="true" detail="true" (click)="goTo(p.url)">
+            <ion-item routerLinkActive="selected" routerDirection="root" lines="true" detail="true" (click)="goTo(p)">
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
           </ion-menu-toggle>
