--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -62,7 +62,7 @@
 </ion-content>
 
 <ion-footer collapse="fade" class="ion-no-border">
-  <ion-toolbar [routerLink]="['/signup']" mode="ios">
+  <ion-toolbar [routerLink]="['/flatmeta/signup']" mode="ios">
     <ion-title>
       <ion-button fill="clear" color="dark" size="small">
         Dont have an account?
