--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -99,7 +99,7 @@
 </ion-content>
 
 <ion-footer collapse="fade" class="ion-no-border">
-  <ion-toolbar [routerLink]="['/login']" mode="ios">
+  <ion-toolbar [routerLink]="['/flatmeta/login']" mode="ios">
     <ion-title>
       <ion-button fill="clear" color="dark" size="small">
         Already have an account?
